qmidiarp-0.5.3 (2013-11-??)

New Features
  o Random functions for sequencer and LFO steps and arp repeat mode
    (feature request #5 Keith Milner)

Improvements
  o NSM support now handles import/export/clear to facilitate
    getting started (Roy Vegard Ovesen)
  o Tempo is now MIDI-controllable (MIDI-learn)

Fixed Bugs
  o LFO offset jumped back to fixed value when MIDI controlled
    (bug #6 distrozapper)
  o Arp trigger behavior was not practical with chords pressed on keyboard
    (bug #7 Burkhard Ritter)
  o JACK Transport no longer worked when no JT Master was present
    (bug #5 Barney Holmes)
  o Deleting an arp pattern in text window while running caused crash
  o Note lengths were not consistent between alsa and jack backends
  o Note lengths did not account for current tempo.
  o Seq note length is now a 16th at half slider scale


qmidiarp-0.5.2 (2013-05-09)

New Features
  o Tempo changes are again possible while running, both manually or by
    a Jack Transport Master
  o Jack Transport position is now taken into account when starting,
    QMidiArp used to start always at zero
  o Muting and sequencer parameter changes can be deferred to pattern
    end using a new toolbutton
  o Modules in the Global Storage window have mute/defer buttons
  o Global Storage location switches can be set to affect only the pattern
  o Non Session Manager support with "switch" capability (thanks to
    Roy Vegard Ovesen)

General Changes
  o NSM support requires liblo development headers (liblo-dev package)


qmidiarp-0.5.1 (2012-11-17)

New Features
  o Global Storages have new features accessible through right-click
    on each storage location. You can choose if at pattern end another
    storage location is automatically selected and create dynamic pattern
    sequences.
  o Global Storage now has a position pacman indicator for each module
  o Clicking on the top button in the global store window now raises the
    selected module window