@@ -8,6 +8,10 @@ Improvements
   o NSM support now handles import/export/clear to facilitate
     getting started (Roy Vegard Ovesen)
   o Tempo is now MIDI-controllable (MIDI-learn)
+  o Seqeuncer transpose slider is now MIDI controllable (MIDI-learn)
+    (feature request #7)
+  o Seqeuncer pattern maximum length extended to 32 bars
+    (feature request #6)
 
 Fixed Bugs
   o LFO offset jumped back to fixed value when MIDI controlled
